Fix row collapsing.

--- a/core/grid/_grid-classes.scss
+++ b/core/grid/_grid-classes.scss
@@ -65,11 +65,6 @@
   &.collapse-left {
     @include collapse(left);
   }
-
-  .collapse > & {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
 
 .flex-columns {
@@ -101,10 +96,12 @@
       }
     }
   }
-  .collapse & > {
-    padding-left: 0;
-    padding-right: 0;
-  }
+}
+
+.row.collapse .columns,
+.flex-row.collapse .flex-columns {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 @mixin breakpoint($media) {
